--- a/.github/workflows/FirstWorkflow.yaml
+++ b/.github/workflows/FirstWorkflow.yaml
@@ -4,19 +4,21 @@ on: # burada workflow'un ne zaman tetikleneceğini belirtiyoruz.
     push:
         branches:
         - main
+        - development
     pull_request:
         branches:
         - main
+        - development
     workflow_dispatch:
 
-jobs: # jobs kısmı oluşturulunca bize bir "runner" oluşturur yani bir sanal makine.
+jobs: # jobs kısmı oluşturulunca bize bir "runner" oluşturur yani bir sanal makine. Burada tanımlanan her job için ayrı bir sanal makine oluşturulur.
     deneme:
         runs-on: ubuntu-latest # burada hangi işletim sistemini kullanacağımızı belirtiyoruz.
         steps: # steps kısmı ise o sanal makine üzerinde ne yapacağımızı belirtiyor.
             - name: Checkout repository
-              uses: actions/checkout@v5
+              uses: actions/checkout@v5 # uses bir action kullanmak istediğimizde kullanılır. Yani bir uygulama kullanmak istediğimizde.
             - name: Hello World
-              run: |
+              run: | # run'da ise o sanal makine üzerinde çalıştırmak istediğimiz komutları yazıyoruz.
                 echo Hello, world!
                 printenv
                 
