--- a/.github/workflows/artifact.yaml
+++ b/.github/workflows/artifact.yaml
@@ -34,7 +34,7 @@ jobs:
           name: first result
       - shell: bash
         run: |
-          result=$(cat math-result.txt)
+          result=$(cat result.txt)
           expr $result \* 9 > final-result.txt
       - name: Upload final math result
         uses: actions/upload-artifact@v4
